--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -20,6 +20,6 @@
   "Download French CV": "Download French CV",
   "Close": "Close",
   "Open CV Form": "Open CV Form",
-  "longText": "As a highly motivated Computer Science and Technology student at Champlain, I have developed a strong passion for software development and problem-solving. Throughout my years of study, I have gained extensive knowledge in various technologies and methodologies, continuously refining my skills in both backend and frontend development. My journey has been enriched by numerous collaborative projects, where I have worked alongside peers to design and implement innovative solutions. These experiences have not only strengthened my technical expertise but have also enhanced my ability to communicate, adapt, and thrive in team-oriented environments. With a commitment to continuous learning, I am always eager to take on new challenges and contribute meaningfully to any project I undertake.",
+  "longText": "As a motivated Computer Science and Technology student at Champlain, I’m passionate about software development and problem-solving. I've gained extensive knowledge in backend and frontend development through collaborative projects, enhancing both my technical skills and ability to work in teams. Always eager to learn, I’m ready to take on new challenges and contribute meaningfully to any project.",
   "Academic Journey": "Academic Journey"
 }
