--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -21,5 +21,69 @@
   "Close": "Close",
   "Open CV Form": "Open CV Form",
   "longText": "As a motivated Computer Science and Technology student at Champlain, I’m passionate about software development and problem-solving. I've gained extensive knowledge in backend and frontend development through collaborative projects, enhancing both my technical skills and ability to work in teams. Always eager to learn, I’m ready to take on new challenges and contribute meaningfully to any project.",
-  "Academic Journey": "Academic Journey"
+  "Academic Journey": "Academic Journey",
+  "Leave a comment": "Leave a comment",
+  "Dashboard": "Dashboard",
+  "Logout": "Logout",
+  "Leave a Comment": "Leave a Comment",
+  "Write your comment here...": "Write your comment here...",
+  "Submit Comment": "Submit Comment",
+  "User Details": "User Details",
+  "Name": "Name :",
+  "Role": "Role :",
+  "Email1": "Email :",
+  "Comments": "Comments",
+  "Welcome back": "Welcome back",
+  "Username not found": "Username not found!",
+  "Review Comments": "Review Comments ",
+  "Contact Me": "Contact Me ",
+  "Send Email": "Send Email: ",
+  "Follow Me": "Follow Me",
+  "Create New Project": "Create New Project",
+  "Project Name": "Project Name",
+  "Project Description": "Project Description",
+  "Cover Image URL": "Cover Image URL",
+  "Reviews": "Reviews",
+  "Project Type": "Project Type",
+  "GitHub Link": "GitHub Link",
+  "Start Date": "Start Date",
+  "End Date": "End Date",
+  "Add Image URL": "Add Image URL",
+  "Add Tech Stack": "Add Tech Stack",
+  "Add Features": "Add Features",
+  "Add Knowledge": "Add Knowledge",
+  "Add Summary": "Add Summary",
+  "Create Project": "Create Project",
+  "My Academic Journey": "My Academic Journey",
+  "Champlain College Saint-Lambert": "Champlain College Saint-Lambert",
+  "Degree": "Degree",
+  "Computer Science Technology": "Computer Science Technology",
+  "Years Attended": "Years Attended",
+  "Description": "Description",
+  "Focused on software development, networking, and cybersecurity.": "Focused on software development, networking, and cybersecurity.",
+  "École secondaire Gerard-Filion": "École secondaire Gerard-Filion",
+  "High School Diploma": "High School Diploma",
+  "About Me": "About Me",
+  "Skills": "Skills",
+  "Expertise Legend": "Expertise Legend",
+  "Beginner": "Beginner",
+  "Intermediate": "Intermediate",
+  "Expert": "Expert",
+  "Frontend Technologies": "Frontend Technologies",
+  "Backend Technologies": "Backend Technologies",
+  "Soft Skills": "Soft Skills",
+  "Communication": "Communication",
+  "Problem-solving": "Problem-solving",
+  "Time Management": "Time Management",
+  "Adaptability": "Adaptability",
+  "Collaboration": "Collaboration",
+  "Attention to Detail": "Attention to Detail",
+  "Leadership": "Leadership",
+  "Creative Thinking": "Creative Thinking",
+  "Customer Focus": "Customer Focus",
+  "Pastimes": "Pastimes",
+  "I am someone who does a lot of exercise...": "I am someone who does a lot of exercise...",
+  "I play Soccer at a competitive level": "I play Soccer at a competitive level",
+  "I like running. I can run 5km in 18 minutes": "I like running. I can run 5km in 18 minutes",
+  "gym": "I go to the gym regularly"
 }
