--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,6 +1,6 @@
 {
   "Home": "Accueil",
-  "Portfolio": "Portfolio",
+  "Portfolio": "Portefeuille",
   "My Projects": "Mon Portfolio",
   "hi, I'm Carlos Alvarado": "Salut, je suis Carlos Alvarado",
   "English": "Anglais",
@@ -21,5 +21,69 @@
   "Close": "Fermer",
   "Open CV Form": "Ouvrir le formulaire du CV",
   "longText": "En tant qu'étudiant motivé en informatique et technologies à Champlain, je suis passionné par le développement logiciel et la résolution de problèmes. J'ai acquis une vaste expérience en développement backend et frontend à travers des projets collaboratifs, améliorant ainsi mes compétences techniques et ma capacité à travailler en équipe. Toujours désireux d'apprendre, je suis prêt à relever de nouveaux défis et à contribuer de manière significative à tout projet.",
-  "Academic Journey": "Parcours Académique"
+  "Academic Journey": "Parcours",
+  "Leave a comment": "Laisser un commentaire",
+  "Dashboard": "Tableau de bord",
+  "Logout": "Se déconnecter",
+  "Leave a Comment": "Laisser un commentaire",
+  "Write your comment here...": "Écrivez votre commentaire ici...",
+  "Submit Comment": "Soumettre le commentaire",
+  "User Details": "Détails de l'utilisateur",
+  "Name": "Nom :",
+  "Role": "Rôle :",
+  "Email1": "E-mail :",
+  "Comments": "Commentaires",
+  "Welcome back": "Bon retour",
+  "Username not found": "Nom d'utilisateur introuvable !",
+  "Review Comments": "Réviser les commentaires ",
+  "Contact Me": "Contactez-moi ",
+  "Send Email": "Envoyer un e-mail: ",
+  "Follow Me": "Suivez-moi",
+  "Create New Project": "Créer un nouveau projet",
+  "Project Name": "Nom du projet",
+  "Project Description": "Description du projet",
+  "Cover Image URL": "URL de l'image de couverture",
+  "Reviews": "Avis",
+  "Project Type": "Type de projet",
+  "GitHub Link": "Lien GitHub",
+  "Start Date": "Date de début",
+  "End Date": "Date de fin",
+  "Add Image URL": "Ajouter l'URL de l'image",
+  "Add Tech Stack": "Ajouter la pile technologique",
+  "Add Features": "Ajouter des fonctionnalités",
+  "Add Knowledge": "Ajouter des connaissances",
+  "Add Summary": "Ajouter un résumé",
+  "Create Project": "Créer un projet",
+  "My Academic Journey": "Mon parcours académique",
+  "Champlain College Saint-Lambert": "Champlain College Saint-Lambert",
+  "Degree": "Diplôme",
+  "Computer Science Technology": "Technologie en informatique",
+  "Years Attended": "Années d'études",
+  "Description": "Description",
+  "Focused on software development, networking, and cybersecurity.": "Axé sur le développement de logiciels, les réseaux et la cybersécurité.",
+  "École secondaire Gerard-Filion": "École secondaire Gerard-Filion",
+  "High School Diploma": "Diplôme d'études secondaires",
+  "About Me": "À propos de moi",
+  "Skills": "Compétences",
+  "Expertise Legend": "Légende de l'expertise",
+  "Beginner": "Débutant",
+  "Intermediate": "Intermédiaire",
+  "Expert": "Expert",
+  "Frontend Technologies": "Technologies frontend",
+  "Backend Technologies": "Technologies backend",
+  "Soft Skills": "Compétences interpersonnelles",
+  "Communication": "Communication",
+  "Problem-solving": "Résolution de problèmes",
+  "Time Management": "Gestion du temps",
+  "Adaptability": "Adaptabilité",
+  "Collaboration": "Collaboration",
+  "Attention to Detail": "Attention aux détails",
+  "Leadership": "Leadership",
+  "Creative Thinking": "Pensée créative",
+  "Customer Focus": "Orientation client",
+  "Pastimes": "Loisirs",
+  "I am someone who does a lot of exercise...": "Je suis quelqu'un qui fait beaucoup d'exercice...",
+  "I play Soccer at a competitive level": "Je joue au football à un niveau compétitif",
+  "I like running. I can run 5km in 18 minutes": "J'aime courir. Je peux courir 5 km en 18 minutes",
+  "gym": "Je vais à la salle de sport régulièrement"
 }
