Completed translations for email page

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -85,5 +85,7 @@
   "I am someone who does a lot of exercise...": "I am someone who does a lot of exercise...",
   "I play Soccer at a competitive level": "I play Soccer at a competitive level",
   "I like running. I can run 5km in 18 minutes": "I like running. I can run 5km in 18 minutes",
-  "gym": "I go to the gym regularly"
+  "gym": "I go to the gym regularly",
+  "Send me an email": "Send me an email",
+  "Send Message": "Send Message"
 }
