--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -85,5 +85,7 @@
   "I am someone who does a lot of exercise...": "Je suis quelqu'un qui fait beaucoup d'exercice...",
   "I play Soccer at a competitive level": "Je joue au football à un niveau compétitif",
   "I like running. I can run 5km in 18 minutes": "J'aime courir. Je peux courir 5 km en 18 minutes",
-  "gym": "Je vais à la salle de sport régulièrement"
+  "gym": "Je vais à la salle de sport régulièrement",
+  "Send me an email": "Envoyez-moi un email",
+  "Send Message": "Envoyer le message"
 }
