--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -21,7 +21,7 @@
   "Close": "Close",
   "Open CV Form": "Open CV Form",
   "longText": "As a motivated Computer Science and Technology student at Champlain, I’m passionate about software development and problem-solving. I've gained extensive knowledge in backend and frontend development through collaborative projects, enhancing both my technical skills and ability to work in teams. Always eager to learn, I’m ready to take on new challenges and contribute meaningfully to any project.",
-  "Academic Journey": "Academic Journey",
+  "Journey": "Journey",
   "Leave a comment": "Leave a comment",
   "Dashboard": "Dashboard",
   "Logout": "Logout",
@@ -37,7 +37,7 @@
   "Username not found": "Username not found!",
   "Review Comments": "Review Comments ",
   "Contact Me": "Contact Me ",
-  "Send Email": "Send Email: ",
+  "Click here to open email form": "Click here to open email form: ",
   "Follow Me": "Follow Me",
   "Create New Project": "Create New Project",
   "Project Name": "Project Name",
