--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -21,7 +21,7 @@
   "Close": "Fermer",
   "Open CV Form": "Ouvrir le formulaire du CV",
   "longText": "En tant qu'étudiant motivé en informatique et technologies à Champlain, je suis passionné par le développement logiciel et la résolution de problèmes. J'ai acquis une vaste expérience en développement backend et frontend à travers des projets collaboratifs, améliorant ainsi mes compétences techniques et ma capacité à travailler en équipe. Toujours désireux d'apprendre, je suis prêt à relever de nouveaux défis et à contribuer de manière significative à tout projet.",
-  "Academic Journey": "Parcours",
+  "Journey": "Parcours",
   "Leave a comment": "Laisser un commentaire",
   "Dashboard": "Tableau de bord",
   "Logout": "Se déconnecter",
@@ -37,7 +37,7 @@
   "Username not found": "Nom d'utilisateur introuvable !",
   "Review Comments": "Réviser les commentaires ",
   "Contact Me": "Contactez-moi ",
-  "Send Email": "Envoyer un e-mail: ",
+  "Click here to open email form": "Cliquez ici pour ouvrir le formulaire de courriel: ",
   "Follow Me": "Suivez-moi",
   "Create New Project": "Créer un nouveau projet",
   "Project Name": "Nom du projet",
