--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -54,7 +54,7 @@
   "Add Knowledge": "Add Knowledge",
   "Add Summary": "Add Summary",
   "Create Project": "Create Project",
-  "My Academic Journey": "My Academic Journey",
+  "My Academic Journey \uD83D\uDCDA": "My Academic Journey \uD83D\uDCDA",
   "Champlain College Saint-Lambert": "Champlain College Saint-Lambert",
   "Degree": "Degree",
   "Computer Science Technology": "Computer Science Technology",
