--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -54,7 +54,7 @@
   "Add Knowledge": "Ajouter des connaissances",
   "Add Summary": "Ajouter un résumé",
   "Create Project": "Créer un projet",
-  "My Academic Journey": "Mon parcours académique",
+  "My Academic Journey \uD83D\uDCDA": "Mon parcours académique \uD83D\uDCDA",
   "Champlain College Saint-Lambert": "Champlain College Saint-Lambert",
   "Degree": "Diplôme",
   "Computer Science Technology": "Technologie en informatique",
