Everything is good now

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -43,7 +43,7 @@
   "Project Name": "Project Name",
   "Project Description": "Project Description",
   "Cover Image URL": "Cover Image URL",
-  "Reviews": "Reviews",
+  "Reviews ✨": "Reviews ✨",
   "Project Type": "Project Type",
   "GitHub Link": "GitHub Link",
   "Start Date": "Start Date",
@@ -64,7 +64,7 @@
   "École secondaire Gerard-Filion": "École secondaire Gerard-Filion",
   "High School Diploma": "High School Diploma",
   "About Me \uD83D\uDCCC": "About Me \uD83D\uDCCC",
-  "Skills": "Skills",
+  "Skills \uD83E\uDDE0": "Skills \uD83E\uDDE0",
   "Expertise Legend": "Expertise Legend",
   "Beginner": "Beginner",
   "Intermediate": "Intermediate",
@@ -81,13 +81,40 @@
   "Leadership": "Leadership",
   "Creative Thinking": "Creative Thinking",
   "Customer Focus": "Customer Focus",
-  "Pastimes": "Pastimes",
+  "Pastimes \uD83C\uDFAD": "Pastimes \uD83C\uDFAD",
   "I am someone who does a lot of exercise...": "I am someone who does a lot of exercise...",
-  "I play Soccer at a competitive level": "I play Soccer at a competitive level",
-  "I like running. I can run 5km in 18 minutes": "I like running. I can run 5km in 18 minutes",
-  "gym": "I go to the gym regularly",
+  "I play Soccer at a competitive level ⚽": "I play Soccer at a competitive level ⚽",
+  "I like running. I can run 5km in 18 minutes \uD83C\uDFC3\uD83D\uDCA8": "I like running. I can run 5km in 18 minutes \uD83C\uDFC3\uD83D\uDCA8",
+  "I go to the gym regularly \uD83C\uDFCB\uFE0F": "I go to the gym regularly \uD83C\uDFCB\uFE0F",
   "Send me an email": "Send me an email",
   "Send Message": "Send Message",
   "Loading...": "Loading...",
-  "defaultSoftSkills": "Communication, Problem-solving, Time Management, Adaptability, Collaboration, Attention to Detail, Leadership, Creative Thinking, Customer Focus"
+  "defaultSoftSkills": "Communication, Problem-solving, Time Management, Adaptability, Collaboration, Attention to Detail, Leadership, Creative Thinking, Customer Focus",
+  "Edit About Me": "Edit About Me",
+  "titleLabel": "Title:",
+  "paragraph": "Paragraph:",
+  "Save": "Save",
+  "Cancel": "Cancel",
+  "Edit Intro Section": "Edit Intro Section",
+  "Below Title": "Below Title:",
+  "Last Text": "Last Text",
+  "Edit or Add Skills": "Edit or Add Skills",
+  "Soft Skills (comma-separated)": "Soft Skills (comma-separated):",
+  "Edit Frontend Skills": "Edit Frontend Skills:",
+  "Proficiency": "Proficiency",
+  "Edit Backend Skills": "Edit Backend Skills",
+  "Add Frontend Skill": "Add Frontend Skill",
+  "Add Backend Skill": "Add Backend Skill",
+  "No description available": "No description available",
+  "Edit Reviews Section": "Edit Reviews Section",
+  "Edit Pastime Section": "Edit Pastime Section",
+  "Edit Pastimes": "Edit Pastimes",
+  "Below text": "Below text",
+  "Create Your Account": "Create Your Account",
+  "Enter your name": "Enter your name",
+  "Confirm Password": "Confirm Password",
+  "Sign Up": "Sign Up",
+  "Already have an account?": "Already have an account?",
+  "Login here": "Login here",
+  "Don't have an account? Sign up!": "Don't have an account? Sign up!"
 }
