--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -43,7 +43,7 @@
   "Project Name": "Nom du projet",
   "Project Description": "Description du projet",
   "Cover Image URL": "URL de l'image de couverture",
-  "Reviews": "Avis",
+  "Reviews ✨": "Avis ✨",
   "Project Type": "Type de projet",
   "GitHub Link": "Lien GitHub",
   "Start Date": "Date de début",
@@ -64,7 +64,7 @@
   "École secondaire Gerard-Filion": "École secondaire Gerard-Filion",
   "High School Diploma": "Diplôme d'études secondaires",
   "About Me \uD83D\uDCCC": "À propos de moi \uD83D\uDCCC",
-  "Skills": "Compétences",
+  "Skills \uD83E\uDDE0": "Compétences \uD83E\uDDE0",
   "Expertise Legend": "Légende de l'expertise",
   "Beginner": "Débutant",
   "Intermediate": "Intermédiaire",
@@ -81,13 +81,40 @@
   "Leadership": "Leadership",
   "Creative Thinking": "Pensée créative",
   "Customer Focus": "Orientation client",
-  "Pastimes": "Loisirs",
+  "Pastimes \uD83C\uDFAD": "Loisirs \uD83C\uDFAD",
   "I am someone who does a lot of exercise...": "Je suis quelqu'un qui fait beaucoup d'exercice...",
-  "I play Soccer at a competitive level": "Je joue au football à un niveau compétitif",
-  "I like running. I can run 5km in 18 minutes": "J'aime courir. Je peux courir 5 km en 18 minutes",
-  "gym": "Je vais à la salle de sport régulièrement",
+  "I play Soccer at a competitive level ⚽": "Je joue au football à un niveau compétitif ⚽",
+  "I like running. I can run 5km in 18 minutes \uD83C\uDFC3\uD83D\uDCA8": "J'aime courir. Je peux courir 5 km en 18 minutes \uD83C\uDFC3\uD83D\uDCA8",
+  "I go to the gym regularly \uD83C\uDFCB\uFE0F": "Je vais à la salle de sport régulièrement \uD83C\uDFCB\uFE0F",
   "Send me an email": "Envoyez-moi un email",
   "Send Message": "Envoyer le message",
   "Loading...": "Chargement...",
-  "defaultSoftSkills": "Communication, Résolution de problèmes, Gestion du temps, Adaptabilité, Collaboration, Souci du détail, Leadership, Pensée créative, Orientation client"
+  "defaultSoftSkills": "Communication, Résolution de problèmes, Gestion du temps, Adaptabilité, Collaboration, Souci du détail, Leadership, Pensée créative, Orientation client",
+  "Edit About Me": "Modifier À propos de moi",
+  "titleLabel": "Titre :",
+  "paragraph": "Paragraphe:",
+  "Save": "Sauvegarder",
+  "Cancel": "Annuler",
+  "Edit Intro Section": "Modifier la section d’introduction",
+  "Below Title": "Sous le titre :",
+  "Last Text": "Dernier texte",
+  "Edit or Add Skills": "Modifier ou ajouter des compétences",
+  "Soft Skills (comma-separated)": "Compétences interpersonnelles (séparées par des virgules) :",
+  "Edit Frontend Skills": "Modifier les compétences en développement Frontend :",
+  "Proficiency": "Niveau de maîtrise",
+  "Edit Backend Skills": "Modifier les compétences en développement Backend",
+  "Add Frontend Skill": "Ajouter une compétence Frontend",
+  "Add Backend Skill": "Ajouter une compétence Backend",
+  "No description available": "Aucune description disponible",
+  "Edit Reviews Section": "Modifier la section des avis",
+  "Edit Pastime Section": "Modifier la section des passe-temps",
+  "Edit Pastimes": "Modifier les passe-temps",
+  "Below text": "Texte ci-dessous",
+  "Create Your Account": "Créez votre compte",
+  "Enter your name": "Entrez votre nom",
+  "Confirm Password": "Confirmez le mot de passe",
+  "Sign Up": "S'inscrire",
+  "Already have an account?": "Vous avez déjà un compte ?",
+  "Login here": "Connectez-vous ici",
+  "Don't have an account? Sign up!": "Vous n'avez pas de compte ? Inscrivez-vous !"
 }
